[package]
name = "keetanetwork-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Async REST client for transmitting vote staples to a KeetaNet node"

[features]
default = ["std"]
http = [
	"dep:reqwest",
	"reqwest/json",
	"reqwest/query",
	"dep:progenitor-client",
	"dep:serde",
	"dep:serde_json",
]
std = [
	"http",
	"dep:tokio",
	"reqwest/rustls",
	"futures/std",
	"base64/std",
	"snafu/std",
	"num-bigint/std",
	"keetanetwork-block/std",
	"keetanetwork-vote/std",
	"keetanetwork-error/std",
	"keetanetwork-account/std",
]
wasm = ["http"]
testing = []

[dependencies]
keetanetwork-block = { version = "0.1.0", path = "../keetanetwork-block", default-features = false, features = ["alloc", "rasn"] }
keetanetwork-vote = { version = "0.1.0", path = "../keetanetwork-vote", default-features = false, features = ["alloc", "der", "rasn"] }
keetanetwork-error = { version = "0.1.0", path = "../keetanetwork-error", default-features = false, features = ["alloc"] }
keetanetwork-account = { version = "0.1.0", path = "../keetanetwork-account", default-features = false, features = ["alloc", "rasn"] }

progenitor-client = { workspace = true, optional = true }
num-bigint = { workspace = true }
rand_core = { workspace = true }
spin = { workspace = true, features = ["mutex", "spin_mutex", "rwlock", "once"] }
async-trait = { workspace = true }
futures = { workspace = true, features = ["alloc"] }

[dependencies.tokio]
workspace = true
features = ["rt", "time"]
optional = true

[dependencies.reqwest]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
optional = true

[dependencies.base64]
workspace = true
features = ["alloc"]

[dependencies.snafu]
workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
gloo-timers = { version = "0.4", features = ["futures"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Performance"] }

[build-dependencies]
progenitor = { workspace = true }
serde_yaml = "0.9"
serde_json.workspace = true
prettyplease = "0.2"
syn = "2.0"

[dev-dependencies]
keetanetwork-utils = { version = "0.1.0", path = "../keetanetwork-utils", features = ["node-harness"] }
keetanetwork-block = { version = "0.1.0", path = "../keetanetwork-block", features = ["testing"] }
hex = { workspace = true }

[dev-dependencies.serde_json]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = ["rt", "rt-multi-thread", "macros", "time"]

[[test]]
name = "e2e"
required-features = ["testing"]
