[package]
name = "keetanetwork-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cryptographic primitives and operations for Keetanetwork"

[lib]
path = "src/lib.rs"

[dependencies]
# Cryptographic libraries
[dependencies.k256]
version = "0.13.2"
default-features = false
features = ["ecdsa", "ecdh", "alloc"]

[dependencies.p256]
version = "0.13.2"
default-features = false
features = ["ecdsa", "ecdh", "alloc"]

[dependencies.ed25519-dalek]
version = "2.0"
default-features = false
features = ["rand_core", "zeroize"]

[dependencies.x25519-dalek]
version = "2.0"
default-features = false
features = ["zeroize"]

[dependencies.curve25519-dalek]
version = "4.1.3"
default-features = false
features = ["zeroize"]

[dependencies.hkdf]
version = "0.12.4"
default-features = false

[dependencies.pbkdf2]
version = "0.12.2"
default-features = false
features = ["hmac", "sha2"]

[dependencies.sha2]
version = "0.10.9"

[dependencies.sha3]
version = "0.10.8"
default-features = false

[dependencies.zeroize]
version = "1.8.1"
features = ["derive"]

[dependencies.rand_core]
workspace = true
features = ["os_rng"]

[dependencies.snafu]
workspace = true
default-features = false

# RustCrypto trait crates
[dependencies.signature]
version = "2.2"
default-features = false
features = ["alloc"]
optional = true

[dependencies.aead]
version = "0.5"
default-features = false
features = ["alloc"]
optional = true

[dependencies.aes]
version = "0.8"
optional = true

[dependencies.cbc]
version = "0.1.2"
features = ["alloc"]
optional = true

[dependencies.ctr]
version = "0.9.2"
features = ["zeroize"]
optional = true

[dependencies.subtle]
version = "2.6.1"
default-features = false
optional = true

[dependencies.hmac]
version = "0.12.1"
optional = true

[dependencies.rand]
workspace = true
optional = true

[dependencies.aes-gcm]
version = "0.10.3"
default-features = false
features = ["alloc", "aes", "getrandom"]

# Utilities
[dependencies.bip39-dict]
version = "0.1.3"

[dependencies.crypto-bigint]
version = "0.6.1"
default-features = false
features = ["serde", "der", "zeroize"]

[dependencies.strum]
version = "0.27.2"
default-features = false
features = ["derive"]

[dependencies.strum_macros]
workspace = true

[dependencies.secrecy]
version = "0.10.3"
features = ["serde"]

# Encoding
[dependencies.base32]
workspace = true

[dependencies.base64]
version = "0.22"

[dependencies.hex]
version = "0.4.3"
default-features = false
features = ["serde", "alloc"]

[dependencies.chrono]
workspace = true
optional = true

# Local dependencies
[dependencies.keetanetwork-error]
workspace = true
optional = true
features = ["std"]

[dependencies.keetanetwork-asn1]
workspace = true
optional = true
features = ["std", "serde", "rasn"]

[dependencies.keetanetwork-utils]
workspace = true

[features]
default = ["std", "signature", "encryption", "rasn"]
std = [
	"alloc",
	"snafu/std",
	"ed25519-dalek/std",
	"hkdf/std",
	"pbkdf2/std",
	"pbkdf2/parallel",
	"rand_core/std",
	"aes-gcm/std",
	"strum/std",
	"hex/std",
	"sha2/asm",
	"sha2/asm-aarch64",
	"sha2/sha2-asm",
	"sha3/asm",
	"dep:chrono",
	"dep:keetanetwork-error",
	"keetanetwork-utils/std",
	"signature?/std",
	"aead?/std",
	"rand?/std",
]
alloc = []
signature = ["dep:signature"]
encryption = [
	"dep:aead",
	"dep:aes",
	"dep:cbc",
	"dep:ctr",
	"dep:hmac",
	"dep:rand",
	"dep:subtle",
]
der = ["keetanetwork-asn1/der"]
rasn = ["keetanetwork-asn1/rasn"]

[dev-dependencies]
hex-literal.workspace = true
