[package]
name = "keetanetwork-error"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Error types for Keetanetwork"

[lib]
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[dependencies]
snafu.workspace = true
