[package]
name = "keetanetwork-error"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Error types for Keetanetwork"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["alloc", "snafu/std"]
alloc = []

[dependencies]
snafu = { workspace = true }
