[package]
name = "keetanetwork-ledger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Ledger functionality for Keetanetwork blockchain"

[dependencies]
keetanetwork-error = { version = "0.1.0", path = "../keetanetwork-error" }
keetanetwork-block = { version = "0.1.0", path = "../keetanetwork-block" }
snafu = { workspace = true }

[dev-dependencies]

[lib]
name = "keetanetwork_ledger"
path = "src/lib.rs"
