[package]
name = "keetanetwork-ledger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Ledger functionality for Keetanetwork blockchain"

[dependencies]
keetanetwork-error = { workspace = true, features = ["std"] }
keetanetwork-block = { workspace = true, features = ["std", "rasn"] }
snafu = { workspace = true, features = ["std"] }

[dev-dependencies]

[lib]
name = "keetanetwork_ledger"
path = "src/lib.rs"
