[package]
name = "keetanetwork-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Node functionality for Keetanetwork blockchain"

[dependencies]
keetanetwork-error = { version = "0.1.0", path = "../keetanetwork-error" }
keetanetwork-block = { version = "0.1.0", path = "../keetanetwork-block" }
keetanetwork-ledger = { version = "0.1.0", path = "../keetanetwork-ledger" }
keetanetwork-p2p = { version = "0.1.0", path = "../keetanetwork-p2p", features = ["switch", "ws-std"] }
keetanetwork-client = { version = "0.1.0", path = "../keetanetwork-client", default-features = false, features = ["std"] }
snafu = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "net", "macros"] }
tokio-tungstenite = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-stackdriver = { workspace = true }

[dev-dependencies]
keetanetwork-p2p = { version = "0.1.0", path = "../keetanetwork-p2p", features = ["switch", "ws-std"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "macros", "sync", "time"] }
serde_json = { workspace = true }
async-trait = { workspace = true }

[lib]
name = "keetanetwork_node"
path = "src/lib.rs"
