[package]
name = "keetanetwork-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Node functionality for Keetanetwork blockchain"

[dependencies]
keetanetwork-error = { workspace = true, features = ["std"] }
keetanetwork-block = { workspace = true, features = ["std", "rasn"] }
keetanetwork-ledger = { workspace = true }
snafu = { workspace = true, features = ["std"] }

[dev-dependencies]

[lib]
name = "keetanetwork_node"
path = "src/lib.rs"
