[package]
name = "keetanetwork-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Peer-to-peer switch and WebSocket backends for KeetaNet nodes"

[features]
default = []
# Native std WebSocket backend over tokio-tungstenite.
ws-std = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "keetanetwork-client/ws"]
# WASI Preview 2 WebSocket backend over wstd-tungstenite.
ws-wasi = ["dep:wstd", "dep:wstd-tungstenite", "dep:futures-util", "keetanetwork-client/ws"]
# Browser WebSocket backend over gloo-net.
ws-wasm = ["dep:gloo-net", "dep:futures-util", "keetanetwork-client/ws"]
# The peer-to-peer switch and its supporting types (std).
switch = ["dep:serde", "dep:serde_json", "dep:hex", "dep:tracing", "dep:rand", "keetanetwork-client/ws"]

[dependencies]
keetanetwork-client = { version = "0.1.0", path = "../keetanetwork-client", default-features = false }
keetanetwork-account = { version = "0.1.0", path = "../keetanetwork-account", default-features = false, features = ["alloc", "rasn"] }
keetanetwork-block = { version = "0.1.0", path = "../keetanetwork-block", default-features = false, features = ["alloc", "rasn"] }
keetanetwork-vote = { version = "0.1.0", path = "../keetanetwork-vote", default-features = false, features = ["alloc", "der", "rasn"] }
keetanetwork-error = { version = "0.1.0", path = "../keetanetwork-error", default-features = false, features = ["alloc"] }

async-trait = { workspace = true }
snafu = { workspace = true }
futures-util = { version = "0.3", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
hex = { workspace = true, optional = true, features = ["alloc"] }
tracing = { workspace = true, optional = true, default-features = false }
rand = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt", "net", "sync", "time", "macros"], optional = true }
tokio-tungstenite = { workspace = true, optional = true }

[target.'cfg(target_os = "wasi")'.dependencies]
wstd = { version = "0.6", optional = true }
wstd-tungstenite = { version = "0.2", optional = true, default-features = false, features = ["connect"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
gloo-net = { version = "0.7", default-features = false, features = ["websocket"], optional = true }

[dev-dependencies]
keetanetwork-client = { version = "0.1.0", path = "../keetanetwork-client", default-features = false, features = ["std", "subscribe"] }
keetanetwork-block = { version = "0.1.0", path = "../keetanetwork-block", default-features = false, features = ["alloc", "rasn", "testing"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-tungstenite = { workspace = true }
futures-util = { version = "0.3" }
serde_json = { workspace = true }
num-bigint = { workspace = true }
