[package]
name = "keetanetwork-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Build utilities for ASN.1 code generation
rasn-compiler = { version = "0.14", optional = true }

[features]
default = []
build = ["dep:rasn-compiler"]
