[package]
name = "keetanetwork-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Utility functions and build tools for Keetanetwork"

[lib]
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Build utilities for ASN.1 code generation
rasn-compiler = { version = "0.14", optional = true }

[features]
default = []
build = ["dep:rasn-compiler"]
