[package]
name = "keetanetwork-vote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Vote and VoteStaple model, codec, and signing for Keetanetwork blockchain"

[features]
default = []
# Deterministic issuer / validity factories for downstream test suites.
testing = ["keetanetwork-block/testing"]

[dependencies]
keetanetwork-error = { version = "0.1.0", path = "../keetanetwork-error" }
keetanetwork-utils = { version = "0.1.0", path = "../keetanetwork-utils" }
keetanetwork-crypto = { version = "0.1.0", path = "../keetanetwork-crypto" }
keetanetwork-account = { version = "0.1.0", path = "../keetanetwork-account" }
keetanetwork-block = { version = "0.1.0", path = "../keetanetwork-block" }
snafu = { workspace = true }
der = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[dependencies.num-bigint]
version = "0.4.6"

[dependencies.num-traits]
version = "0.2.19"

[dependencies.flate2]
version = "1.1"
default-features = false
features = ["rust_backend"]

[dev-dependencies]
chrono = { workspace = true }
hex-literal = { workspace = true }
keetanetwork-block = { version = "0.1.0", path = "../keetanetwork-block", features = ["testing"] }
keetanetwork-utils = { version = "0.1.0", path = "../keetanetwork-utils", features = ["node-harness"] }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }

[lib]
name = "keetanetwork_vote"
path = "src/lib.rs"

[[test]]
name = "typescript_compat"
required-features = ["testing"]

[[test]]
name = "e2e_node"
required-features = ["testing"]

[[test]]
name = "wire_corruption"
required-features = ["testing"]
