[package]
name = "keetanetwork-vote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Vote and VoteStaple model, codec, and signing for Keetanetwork blockchain"

[features]
default = ["std", "der", "rasn"]
std = [
	"alloc",
	"chrono/std",
	"hex/std",
	"snafu/std",
	"num-bigint/std",
	"num-traits/std",
	"keetanetwork-error/std",
	"keetanetwork-utils/std",
	"keetanetwork-asn1/std",
	"keetanetwork-account/std",
	"keetanetwork-crypto/std",
	"keetanetwork-block/std",
]
alloc = [
	"chrono/alloc",
	"keetanetwork-error/alloc",
	"keetanetwork-asn1/alloc",
	"keetanetwork-account/alloc",
	"keetanetwork-block/alloc",
]
der = ["keetanetwork-asn1/der", "keetanetwork-account/der", "keetanetwork-crypto/der", "keetanetwork-block/der"]
rasn = ["keetanetwork-asn1/rasn", "keetanetwork-account/rasn", "keetanetwork-crypto/rasn", "keetanetwork-block/rasn"]
testing = ["std", "keetanetwork-block/testing", "keetanetwork-asn1/testing"]

[dependencies]
keetanetwork-error = { workspace = true }
keetanetwork-utils = { workspace = true }
keetanetwork-crypto = { workspace = true, features = ["signature"] }
keetanetwork-account = { workspace = true }
keetanetwork-asn1 = { workspace = true }
keetanetwork-block = { workspace = true }
snafu = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[dependencies.num-bigint]
workspace = true

[dependencies.num-traits]
version = "0.2.19"
default-features = false

[dependencies.miniz_oxide]
version = "0.8"
default-features = false
features = ["with-alloc"]

[dev-dependencies]
chrono = { workspace = true }
hex-literal = { workspace = true }
keetanetwork-block = { workspace = true, features = ["std", "rasn", "testing"] }
keetanetwork-utils = { workspace = true, features = ["std", "node-harness"] }
serde = { workspace = true }
serde_json = { workspace = true }
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }

[lib]
name = "keetanetwork_vote"
path = "src/lib.rs"

[[test]]
name = "typescript_compat"
required-features = ["testing"]

[[test]]
name = "e2e_node"
required-features = ["testing"]

[[test]]
name = "wire_corruption"
required-features = ["testing"]
