[package]
name = "keetanetwork-x509"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "X.509 certificate handling for Keetanetwork"

[lib]
path = "src/lib.rs"

# X.509 certificate parsing
[dependencies.x509-cert]
version = "0.2.5"
features = ["std", "pem"]

# ASN.1 and DER encoding
[dependencies.der]
workspace = true
features = ["std"]

[dependencies.rasn]
workspace = true
optional = true
features = ["std", "bytes"]

# Date/time handling
[dependencies.chrono]
workspace = true
features = ["now", "std"]

# Error handling
[dependencies.snafu]
workspace = true
features = ["std"]

# Encoding utilities
[dependencies.base64]
workspace = true
features = ["std"]

# Hex encoding/decoding
[dependencies.hex]
workspace = true
features = ["std"]

# Serialization (optional)
[dependencies.serde]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
optional = true

# Local dependencies
[dependencies]
keetanetwork-utils = { version = "0.1.0", path = "../keetanetwork-utils" }
keetanetwork-error = { version = "0.1.0", path = "../keetanetwork-error" }
keetanetwork-crypto = { version = "0.1.0", path = "../keetanetwork-crypto" }
keetanetwork-asn1 = { version = "0.1.0", path = "../keetanetwork-asn1" }
keetanetwork-account = { version = "0.1.0", path = "../keetanetwork-account" }

[features]
default = ["serde", "rasn"]
serde = ["dep:serde", "dep:serde_json"]
der = [
	"keetanetwork-asn1/der",
	"keetanetwork-crypto/der",
	"keetanetwork-account/der",
]
rasn = [
	"dep:rasn",
	"keetanetwork-asn1/rasn",
	"keetanetwork-crypto/rasn",
	"keetanetwork-account/rasn",
]

[dev-dependencies]
hex-literal.workspace = true

[build-dependencies]
keetanetwork-utils = { version = "0.1.0", path = "../keetanetwork-utils", features = [
	"build",
] }
