[package]
name = "x509"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]

# X.509 certificate parsing
[dependencies.x509-cert]
version = "0.2.5"
features = ["std", "pem", "sha1"]

# ASN.1 and DER encoding
[dependencies.der]
workspace = true

# Date/time handling
[dependencies.chrono]
workspace = true

# Error handling
[dependencies.snafu]
workspace = true

# Encoding utilities
[dependencies.base64]
workspace = true

# Hex encoding/decoding
[dependencies.hex]
workspace = true

# Serialization (optional)
[dependencies.serde]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
optional = true

# Local dependencies
[dependencies.utils]
path = "../utils"

[dependencies.keetanet-error]
path = "../keetanet-error"

[dependencies.crypto]
path = "../crypto"

[dependencies.asn1]
path = "../asn1"
features = ["der"]

[dependencies.accounts]
path = "../accounts"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
hex-literal.workspace = true
